Fixed falx description (only en for now). Uses actual server multiplier and coverts it to percentage

--- a/FalxRotBonusDamage/FalxRotBonusDamage/assets/falxrotbonusdamage/lang/en.json
+++ b/FalxRotBonusDamage/FalxRotBonusDamage/assets/falxrotbonusdamage/lang/en.json
@@ -1,4 +1,4 @@
 {
     "falxrotbonusdamage:config-rust-multiplier": "Rust-creature damage multiplier: {0}",
-    "falxrotbonusdamage:iteminfo-falxrustmultiplier": "<font color=\"#99c9f9\">Deals {0}× damage to rust creatures.</font>"
+    "falxrotbonusdamage:iteminfo-falxrustmultiplier": "<i>Deals {0}% bonus damage to rust creatures.</i>"
 }
